--- a/Loop/www/index.html
+++ b/Loop/www/index.html
@@ -47,3 +47,8 @@
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
+<!--
+@Autor : Zhuzhi
+@Email : arigtu1312@gmail.com
+@proyect : loop 2016 all rigths reserved 
+-->
